# marathi-shabda

./: .gitignore  BUILD_AND_DEPLOY.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-CODE  LICENSE-DATA  MANIFEST.in  NOTICE  PYPI_DEPLOYMENT.md  PyPI-Recovery-Codes-iampratham29-2026-01-28T20_16_10.497621.txt  QUICKSTART.md  README.md  README_English.md  check_db_words.py  debug_internal.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/marathi_shabda/: __init__.py  api.py  cli.py  exceptions.py  models.py
src/marathi_shabda/data/: README_DATABASE.txt  __init__.py
src/marathi_shabda/dictionary/: __init__.py  adapter.py
src/marathi_shabda/inference/: __init__.py  kaal_inference.py  pos_inference.py
src/marathi_shabda/morphology/: __init__.py  exceptions.py  lemmatizer.py  stem_alternations.py  vibhakti_rules.py
src/marathi_shabda/normalization/: __init__.py  safe_normalizer.py  script_detection.py  transliterator.py
tests/: test_inference.py  test_morphology.py  test_normalization.py
